src/test/resources/purescript_examples/failing/TypeWildcards3.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('TypeWildcards')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Foo')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Foo')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('showFoo')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Show')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PsiElement(()('(')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeConstructor)
                PureASTWrapperElement(Qualified)
                  PsiElement(proper name)('Foo')
                  PsiElement(whitespace)(' ')
            PureASTWrapperElement(TypeAtom)
              PsiElement(identifier)('_')
          PsiElement())(')')
          PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(ValueDeclaration)
          PsiElement(identifier)('show')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Binder)
            PureASTWrapperElement(ConstructorBinder)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('Foo')
                PsiElement(whitespace)(' ')
          PsiElement(=)('=')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(StringLiteral)
                PsiElement(string)('"Foo"')
                PsiElement(whitespace)('\n\n')
